# builder

./: .aspell.pws  .gitignore  404.html  Readme.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
architecture/Readme/: index.html
cpb/: __init__.py  build.py  config.py  create.py  utils.py
cpb/cekitModules/: __init__.py  versions.yaml
cpb/resources/: cekitImage.yaml.j2  cekitWithExtendedModule  cpchefConfig.yaml.j2  cpmdConfig.yaml.j2  enterContainer.sh.j2  imageRemoval.sh.j2  natsConfig.conf.j2  podCommonsReadme.md.j2  podCreation.sh.j2  podReadme.md.j2  podRemoval.sh.j2  podStart.sh.j2  podStop.sh.j2  setupUserSsh.py.j2  seutpComputePods.j2  turnOffUserSsh.py.j2  userReadme.md.j2
cpb/templates/: cekitImage.yaml.j2
developmentTasks/Readme/: index.html
developmentTasks/task001-embed-lua-in-golang/: index.html
developmentTasks/task002-provide-system-configuration/: index.html
developmentTasks/task003-provide-pod-assembling-tool/: index.html
developmentTasks/task003a-assemble-pods-with-nats/: index.html
developmentTasks/task00x-assemble-pods-with-syncthing/: index.html
developmentTasks/task00x-provide-task-assembling-tool/: index.html
developmentTasks/task00x-provide-tls-certificate-managment-tool/: index.html
docs/: Readme.md
docs/architecture/: Readme.md
docs/developmentTasks/: Readme.md  task001-embed-lua-in-golang.md  task002-provide-system-configuration.md  task003-provide-pod-assembling-tool.md  task003a-assemble-pods-with-nats.md  (+3 more)
examples/: .gitignore
scripts/: installEditableCpbCommand
search/: search_index.json
(+46 files in other folders)
