[metadata]
name = computePodBuilder
version = 0.0.1
description = A tool to build distributed peer-to-peer pods of compute modules for embarrassingly parallel problems using rootless Podman containers. 
url = https://github.com/computePods/computePodBuilder
author = Stephen Gaito
author_email = stephen@perceptisys.co.uk

[options]
packages = cpb
install_requires =
  cekit  >= 3.9
  click  >= 7.0
  jinja2 >= 2.10.1
  pyyaml >= 5.3.1
  py7zr  >= 0.15.1

[options.entry_points]
console_scripts =
    cpb = cpb:cli
